# cats-fact

./: pyproject.toml
cats_fact/: __init__.py  activity.py  cats_fact.py  colors.py  comments.py
tests/: test_cats_fact.py
