[tool.poetry]
name = "cats-fact"
version = "0.1.0"
description = ""
authors = ["Shammah Anucha <shammah.anucha@yahoo.com>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.27.1"
Pygments = "^2.12.0"
unicode = "^2.8"
colorama = "^0.4.4"
mypy = "^0.950"


[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^4.0.1"
requests-mock = "^1.9.3"
black = "^22.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
